@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -33,19 +34,40 @@ public class SecurityConfig {
 		return new BCryptPasswordEncoder();
 	}
 
+	/**
+	 * ✅ Configuração central de CORS (substitui CorsConfig.java)
+	 */
 	@Bean
 	CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+
+		// 🔹 URLs do front-end permitidas (Next.js)
+		configuration.setAllowedOriginPatterns(Arrays.asList(
+				"http://localhost:3000",
+				"http://localhost:3001"
+		));
+
+		// 🔹 Métodos HTTP permitidos
 		configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+		// 🔹 Cabeçalhos permitidos
 		configuration.setAllowedHeaders(List.of("*"));
+
+		// 🔹 Permite envio de cookies JWT
 		configuration.setAllowCredentials(true);
 
+		// 🔹 Tempo de cache do preflight (1h)
+		configuration.setMaxAge(3600L);
+
+		// 🔹 Registra a configuração para todos os endpoints
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
 	}
 
+	/**
+	 * 🔹 Configuração principal de segurança
+	 */
 	@Bean
 	SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 		http
